# ijab2025_econ

./: .gitignore  IMPLEMENTATION_VERIFICATION.md  IMPROVEMENTS.md  POLICY_PORTFOLIO_OPTIMIZATION_README.md  README.md  REFACTORING_SUMMARY.md  SUMMARY.md  TESTING.md  analyze_above_average.py  analyze_alternative_solutions.py  config.py  final_verification.py  generate_all_defense_levels.py  generate_negative_defense_levels.py  logger.py  main.py  max_gdp.csv  max_gdp.py  max_gdp_defense-1500.csv  max_gdp_defense-2000.csv  max_gdp_defense.py  max_gdp_defense1500.csv  max_gdp_defense2500.csv  max_gdp_defense270.csv  max_gdp_defense270.py  max_gdp_defense3000.csv  max_gdp_defense305.csv  max_gdp_defense305.py  max_gdp_defense5500.csv  max_gdp_equal_distro.csv  max_gdp_equal_distro.py  max_gdp_with_defense.csv  max_gdp_with_defense.py  max_gdp_with_defense270.py  max_gdp_with_defense305.csv  max_gdp_with_defense305.py  max_gdp_with_defense405.csv  max_gdp_with_defense405.py  optimal.py  optimizer_utils.py  (+13 more)
outputs/defense/: alternative_solutions_analysis.csv  economic_effects_summary.csv  max_gdp_defense-1000.csv  max_gdp_defense-1500.csv  max_gdp_defense-2000.csv  max_gdp_defense-2500.csv  max_gdp_defense-3000.csv  max_gdp_defense-3500.csv  max_gdp_defense-4000.csv  max_gdp_defense-500.csv  max_gdp_defense0.csv  max_gdp_defense1000.csv  max_gdp_defense1500.csv  max_gdp_defense2000.csv  max_gdp_defense2500.csv  max_gdp_defense3000.csv  max_gdp_defense3500.csv  max_gdp_defense4000.csv  max_gdp_defense4500.csv  max_gdp_defense500.csv  max_gdp_defense5000.csv  max_gdp_defense5500.csv  max_gdp_defense6000.csv  policy_decisions_matrix.csv
outputs/senate/: economic_effects_summary.csv  policy_decisions_matrix.csv  policy_portfolio_-1000.csv  policy_portfolio_-1500.csv  policy_portfolio_-2000.csv  policy_portfolio_-2500.csv  policy_portfolio_-3000.csv  policy_portfolio_-3500.csv  policy_portfolio_-4000.csv  policy_portfolio_-500.csv  policy_portfolio_0.csv  policy_portfolio_1000.csv  policy_portfolio_1500.csv  policy_portfolio_2000.csv  policy_portfolio_2500.csv  policy_portfolio_3000.csv  policy_portfolio_3500.csv  policy_portfolio_4000.csv  policy_portfolio_4500.csv  policy_portfolio_500.csv  policy_portfolio_5000.csv  policy_portfolio_5500.csv  policy_portfolio_6000.csv
