[project]
name = "ijab-econ-scenario-analysis"
version = "0.1.0"
description = "Economic scenario analysis optimization using Gurobi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "gurobipy>=11.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.0.0",
    "types-openpyxl>=3.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "*.xlsx",
    "*.csv",
    "outputs/**/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff configuration - fast Python linter and formatter
[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "PERF",   # Perflint - performance optimizations
    "FURB",   # refurb - modernize code
    "LOG",    # flake8-logging
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "ARG",    # flake8-unused-arguments
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "ASYNC",  # flake8-async
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "TRY003",  # Avoid specifying long messages outside exception class
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["ijab_econ_scenario_analysis"]
force-single-line = false
force-sort-within-sections = true

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 6
max-statements = 60

# Mypy configuration - static type checker
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Microoptimizations and performance settings
[[tool.mypy.overrides]]
module = [
    "gurobipy",
    "gurobipy.*",
]
ignore_missing_imports = true
